# simpomo-for-android

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: android-release.yml
docs/: development.md  spec.md
docs/decisions/: 0001-android-stack-and-reuse.md  0002-state-ownership-and-timing.md  0003-core-duplication-sync.md  0004-track-gen-android.md
scripts/: check-core-drift.ps1
scripts/hooks/: pre-push
src/: App.svelte  Settings.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  session.rs  settings.rs  stats.rs  timer.rs
src/lib/: audio.ts  bgm.ts  color.ts  notify.ts  settings.ts  sounds.ts  stats.ts  timer.ts  update.ts  wakelock.ts
